# Excel_parser

./: README.md  fact_forecast_parser-0.0.1-py3-none-any.whl  file_excel.xlsx
fact_forecast_parser/: LICENSE  README.md  requirements.txt  setup.cfg
fact_forecast_parser/fact_forecast_parser/: parser.py
fact_forecast_parser/fact_forecast_parser/datamodels/: fact_forecast_lib.py
