[metadata]
name = fact_forecast_parser
version = 0.0.1
author = Sergey Polyakov
author_email = r-38@mail.ru
description = Parser for fact-forecast data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martinlauren55/Excel_parser
classifiers =
    Progremming Language :: Python :: 3
    Licence :: OSI Approved :: MIT Licence
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires = file: requirements.txt